# python-ofiq

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
csrc/: ofiq_pybind.cpp
docker/: Dockerfile
scripts/: build_ofiq.sh
src/ofiq/: __init__.py  _core.pyi  cli.py  setup.py
tests/: conftest.py  test_ofiq.py
